--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 h1{
     font-size: 35px;
     font-weight: bolder;
-    color: #f85525;
     margin: 10px;
 }
 h2{
@@ -11,15 +10,16 @@ h2{
 }
 h3{
     font-size: 23px;
-    background-color: #028391;
+    background-color: #c33a19;
+    color: #ffffff;
 }
 h4{
     font-size: 23px;
-    background-color: #f85525;
+    background-color: #c33a19;
     text-align: center;
 }
 body{
-    background-color: #f6dcac;
+    background-color: #f9a690;
 }
 p{
     margin-left: 10px;
@@ -32,19 +32,19 @@ p{
     z-index: 100;
     font-size: 24px;
     opacity: 0;
-    background-color: #028391;
+    background-color: #0868b9;
 }
 .skip:focus{
     opacity: 1;
     top: 0;
-    color: white;
+    color: #ffffff;
 }
-#nav_bar ul li a.active{
-    background-color: #f6dcac;
-    color: #01204f;
+.nav_bar ul li a.active{
+    color: #ffffff;
+    font-weight: bolder;
 }
 
-#nav_bar li{
+.nav_bar a{
     margin-left: 0;
     padding: 5px;
     float: left;
@@ -52,16 +52,14 @@ p{
     padding: 14px 16px;
     text-decoration: none;
     font-size: 20px;
-}
-#nav_bar ul li a{
-    color: #f85525;
+    color: #ffffff;
 }
 nav{
     position: relative;
     overflow: hidden;
-    background-color: #01204f;
+    background-color: #c33a19;
 }
-#nav_bar a:hover{
+.nav_bar a:hover{
     font-weight: bold;
 }
 h3{
@@ -72,14 +70,14 @@ h3{
     justify-items: center;
 }
 img{
-    border: 10px solid #028391;
+    border: 10px solid #c33a19;
 }
 video{
-    border: 10px solid #028391;
+    border: 10px solid #c33a19;
 }
 .introimage{
     display: block;
-    border: 15px solid #faa968;
+    border: 15px solid #0868b9;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
