--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ p{
     top: 0;
     color: #ffffff;
 }
-.nav_bar ul li a.active{
+.nav_bar a.active{
     color: #ffffff;
     font-weight: bolder;
 }
